# wai-r0

./: APPLY_PATCH.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PATCH_FILES.txt  PATCH_MANIFEST.sha256  README.md  SECURITY.md  main.py  pyproject.toml
configs/benchmark/: ablation.yaml  prior.yaml  suite.yaml  symbolic_arc.yaml  tiny_train.yaml  zero.yaml
configs/experiments/: mla_memory.yaml  recurrent_ood.yaml
configs/model/: mini_8gb.yaml  mini_8gb_mla.yaml  mla_lite_tiny.yaml  moe_tiny.yaml  nano.yaml  nano_gqa.yaml  nano_mla.yaml  nano_moe.yaml  nano_recurrent.yaml  recurrent_tiny.yaml  small.yaml  tiny.yaml
configs/sweeps/: recurrent_depth.yaml
docs/: ARCHITECTURE.md  ARC_PROTOCOL.md  BENCHMARK_METHODOLOGY.md  BPE_TOKENIZER.md  CHAT_CSV_SCHEMA.md  CHECKPOINT_FORMAT.md  COMPILED_DATASETS.md  CSV_LANGUAGE_TRAINING.md  DATA_SCHEMA.md  EVALUATION_PROTOCOL.md  EXPERIMENT_MANIFEST.md  HARDWARE.md  HARDWARE_8GB.md  HARDWARE_CALIBRATION.md  INFERENCE.md  MIGRATION_V04_TO_V05.md  MIGRATION_V05_TO_V06.md  QUALITY_GATES.md  REPRODUCIBILITY.md  RESULTS_TEMPLATE.md  RUN_REGISTRY.md  SCIENTIFIC_LIMITS.md  SWEEPS.md  TKINTER_WORKBENCH.md  TOKENIZATION.md  TRAINING_PROTOCOL.md  TRAINING_ROADMAP.md  V0_2_1_CHANGELOG.md  V0_2_CHANGELOG.md  V0_3_CHANGELOG.md  V0_4_2_CHANGELOG.md  V0_4_3_CHANGELOG.md  V0_4_4_CHANGELOG.md  V0_4_5_CHANGELOG.md  V0_4_6_CHANGELOG.md  V0_4_CHANGELOG.md  V0_5_IMPLEMENTATION.md  V0_6_IMPLEMENTATION.md  VALIDATION.md  VISION.md  (+1 more)
examples/: training.md
examples/generated_holdouts/: synthetic_2026_0000_rotate90.json  synthetic_2026_0001_rotate180.json  synthetic_2026_0002_rotate270.json  synthetic_2026_0003_mirror_x.json  synthetic_2026_0004_mirror_y.json  synthetic_2026_0005_rotate90.json  synthetic_2026_0006_rotate180.json  synthetic_2026_0007_rotate270.json
examples/tasks/: mirror_y.json  rotate90.json
reports/: ablation.json  ablation.md  memory.json  memory.md  symbolic_arc.json  symbolic_arc.md  tiny_train.json  tiny_train.md  zero_neural.json  zero_neural.md
scripts/: audit_training_csv.py  check_quality.py  check_v05_quality.py  export_report.py  inspect_training_csv.py  profile_memory.py  run_ablation.py  run_architecture_priors.py  run_suite.py  run_symbolic_arc.py  run_tiny_train.py  run_train_csv.py  run_zero_neural.py  sample_csv_checkpoint.py  verify_release.py
src/wai_r0/: __init__.py  __main__.py  benchmarks.py  cli.py  config.py  gui.py  model.py  profiler.py  report.py  symbolic.py  v05_cli.py  version.py
src/wai_r0/app/: __init__.py  cli.py  services.py  v06_services.py
src/wai_r0/core/: __init__.py  reproducibility.py  runtime.py
src/wai_r0/data/: __init__.py  chat.py  compiled.py  csv_reader.py  dedupe.py  manifest.py  packing.py  schema.py  splits.py  streaming.py
src/wai_r0/eval/: __init__.py  algorithmic.py  context.py  gates.py  generation.py  holdout.py  language.py  leakage_guard.py  metrics.py  prior_diagnostics.py  scorecard.py  suite.py
src/wai_r0/experiments/: __init__.py  manifest.py  runner.py  statistics.py  sweep.py
src/wai_r0/hardware/: __init__.py  (+3 more)
tests/: conftest.py  test_benchmarks.py  test_model.py  test_symbolic.py  test_train_markdown.py  test_v02_cli_and_ablation.py  test_v02_eval.py  test_v03_prior_and_suite.py  test_v041_gui.py  test_v04_csv_training.py  test_v05_algorithmic.py  test_v05_algorithmic_runner.py  test_v05_checkpoint.py  test_v05_cli.py  test_v05_cli_integration.py  test_v05_config_validation.py  test_v05_data.py  test_v05_experiment_runner.py  test_v05_language_service.py  test_v05_manifest_reporting.py  test_v05_model.py  test_v05_model_edge_cases.py  test_v05_modeling_common.py  test_v05_streaming_packing.py  test_v05_training_primitives.py  test_v05_training_profile_statistics.py  test_v06_compiled_data.py  test_v06_inference.py  test_v06_language_and_cli_surface.py  test_v06_registry_quality_hardware.py  test_v06_sweep.py  test_v06_tokenization.py  test_v06_training_context_cli.py
training/: README.md  basic_language_sample.csv  csv_language_probe.md
(+35 files in other folders)
